tests/should_fail/traits/17_impl_refinement.coma
module M_impl_Tr_for_unit__my_function (* <() as Tr> *)
  use creusot.int.UInt64
  use creusot.prelude.Any
  use mach.int.Int
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec my_function_unit (self: ()) (return (x: UInt64.t)) = {[@expl:my_function requires] true}
    (! bb0
    [ bb0 = s0 [ s0 = [ &_ret <- (20: UInt64.t) ] s1 | s1 = return {_ret} ] ] [ & _ret: UInt64.t = Any.any_l () ])
    [ return (result: UInt64.t) -> {[@expl:my_function ensures] UInt64.t'int result >= 15} (! return {result}) ]
end
module M_impl_ReqFalse_for_unit__need_false (* <() as ReqFalse> *)
  use creusot.int.UInt64
  use mach.int.Int
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  constant y : UInt64.t
  
  function need_false_unit (y: UInt64.t) : ()
  
  goal vc_need_false_unit: true
end
module M_impl_Tr_for_unit__my_function__refines (* <() as Tr> *)
  use creusot.int.UInt64
  use mach.int.Int
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  goal refines: forall self: (). forall result: UInt64.t. UInt64.t'int result >= 15 -> UInt64.t'int result >= 10
end
module M_impl_ReqFalse_for_unit__need_false__refines (* <() as ReqFalse> *)
  use creusot.int.UInt64
  use mach.int.Int
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  goal refines: forall x: UInt64.t. UInt64.t'int x >= 10 -> UInt64.t'int x >= 15
end
